--- a/eats.css
+++ b/eats.css
@@ -5,17 +5,19 @@ body{
     background: #fff7e5;
 }
 
-#eats-well{
-  font-size:3em;
-  top: 50%;
-  padding:50px;
+.panel{
+  padding-top:30px;
   background: rgb(250, 250, 250);
 }
 
+#eats-well{
+  font-size:3em;
+}
+
 #footer{
+
 }
 
-#footer-sep{
-  width:20px;
+#try_again{
+  padding:20px;
 }
-
